--- a/map/index.html
+++ b/map/index.html
@@ -23,6 +23,8 @@
   <body>
 
 
+	<section id = "map"></section>
+
     <section id="content">
 	<h1>Shaded Map of World</h1>
 	<p>Your challenge. Create a shaded map of the world from some data about each country, get it to display and also dynamically update other content on this page.</p>
