info section added
info section added

--- a/map/index.html
+++ b/map/index.html
@@ -24,6 +24,8 @@
 
 
 	<section id = "map"></section>
+	<section id = "info"></section>
+
 
     <section id="content">
 	<h1>Shaded Map of World</h1>
